--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "vue": "^3.5.13",
-    "vuetify": "^3.7.5"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
