--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "joi": "^17.13.3",
+    "pinia": "^2.3.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
