--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "vue_clients",
-  "version": "0.0.0",
+  "name": "vue-nuxt-clients",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
-    "@fortawesome/free-regular-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@pinia/nuxt": "^0.9.0",
+    "@vesp/nuxt-fontawesome": "^1.1.0",
     "joi": "^17.13.3",
+    "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
-    "vue": "^3.5.13"
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "vite": "^6.0.1",
-    "vite-plugin-vue-devtools": "^7.6.5"
+    "@fortawesome/free-solid-svg-icons": "^6.7.1"
   }
 }
